# wasm-echarts-ex

./: Cargo.toml  LICENSE  Readme.md  index.html
docs/: index.html  wasm-echarts-ex-2a0ce7301987cc5e.js  wasm-echarts-ex-2a0ce7301987cc5e_bg.wasm
docs/snippets/wasm-echarts-ex-e255e776eb643a67/: echarts-proxy.js
src/: lib.rs
