[package]
name = "wasm-echarts-ex"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-utils = "0.1.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3", features = ["Element"] }